@@ -94,8 +94,8 @@ public final class KeywordTokenizer extends Tokenizer {
   }
 
   @Override
-  public void reset(Reader input) throws IOException {
-    super.reset(input);
+  public void setReader(Reader input) throws IOException {
+    super.setReader(input);
     this.done = false;
   }
 }
